# nd_rust

./: .gitignore  Cargo.toml  _big_sellke_scaled.py  _big_sellke_scaled1.py  _big_sellke_sims.py  _big_sellke_sims1.py  _big_sims4.py  _big_sims_covid.py  _big_sims_nc1.py  _big_sims_nc2.py  _big_sims_np.py  _big_sims_scale.py  _big_sims_scale_no_age1.py  _big_sims_scale_no_age2.py  _characterize_networks.py  _error_calc.py  _errors.py  _final_sellke.py  _final_sellke_noage.py  _final_sellke_noage_c1.py  _final_sellke_noage_c2.py  _final_sellke_noage_p.py  _final_sellke_scale.py  _growth_rate.py  _reduce_filesize.py  _run_missing.py  _save_networks.py  _secondary_cases.py  _secondary_cases_scale.py  _single_sims.py  _tests_covid.py  _tests_noAge.py  _tests_r0.py  _tests_scalings.py  big_sims1.py  big_sims2.py  big_sims3.py  growth_rate_fig.py  nd_python.py  nd_python_avon.py  (+9 more)
_run_files/: c1dn_missing.slurm  final_sellke.slurm  final_sellke_noage.slurm  final_sellke_noage_c1.slurm  final_sellke_noage_c2.slurm  final_sellke_noage_p.slurm  final_sellke_scale.slurm  growth_rate.slurm  reduce_filesize.slurm  run_errors.slurm  run_nc1.slurm  run_nc2.slurm  run_np.slurm  run_scale.slurm  run_scale_no_age1.slurm  run_scale_no_age2.slurm  run_tests.slurm  sc.slurm  sc_scale.slurm  sellke_noscale.slurm  sellke_scale.slurm
input_data/: NATSAL_df.csv  Vietnam_df.csv  france_df.csv  hongkong_df.csv  polymod_df.csv  somaliland_df.csv
src/: connecting_stubs.rs  distributions.rs  dpln.rs  lib.rs  network_properties.rs  network_structure.rs  run_model.rs
(+17 files in other folders)
