[package]
name = "nd_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.

name = "nd_rust"

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]

crate-type = ["cdylib"]

[dependencies]
argmin = "0.9.0"
argmin-math = "0.3.0"
ndarray = "0.16.1"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
statrs = "0.16.0"
